Refactor security components and enhance authentication mechanisms
- Updated KeystoreBackup to use DB.save() instead of backup.save().
- Refactored CustomRealm to improve authentication flow and error handling.
- Introduced LoginAttemptCache to manage login attempts and account locking.
- Added DesktopSubjectFactory to optimize subject creation for desktop applications.
- Created BlueFlatLafIntellij for custom Look and Feel.
- Added unit tests for ConfigService and DataProvider to ensure functionality.